objects/Campaign.object
<CustomObject><fields>
        <fullName>Additional_GAU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Additional GAU</label>
        <referenceTo>npsp__General_Accounting_Unit__c</referenceTo>
        <relationshipLabel>Campaigns (Additional GAU)</relationshipLabel>
        <relationshipName>Campaigns1</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Chapter_Chair_Email__c</fullName>
        <formula>Chapter__r.Chapter_Chair__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Chapter Chair Email</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Chapter_Chair__c</fullName>
        <formula>Chapter__r.Chapter_Chair__r.FirstName + " " +  Chapter__r.Chapter_Chair__r.LastName</formula>
        <label>Chapter Chair</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Chapter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Chapter</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Chapter Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Default_Letter_Code__c</fullName>
        <label>Default Letter Code</label>
        <picklist>
            <picklistValues>
                <fullName>Calendar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada Sweepstakes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Committee Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Donation Calendar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ducks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event Volunteer Raffle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>First Hunt Mem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Donation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gift Letter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gratis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hunters Letter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sportsman’s Raffle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spring Raffle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Truck Raffle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waterfowl ID Book</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>We do ours Seperate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Winter Raffle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year End</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Default_Market_Code__c</fullName>
        <label>Default Market Code</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Description_Rich__c</fullName>
        <inlineHelpText>Use the "Bold" as a sub heading</inlineHelpText>
        <label>Description_Rich</label>
        <length>32768</length>
        <type>Html</type>
    </fields><fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Landing_Page_Campaign_Link__c</fullName>
        <description>Generated URL used for electronic marketing. This URL should be used when creating Pardot e-mails.</description>
        <formula>Landing_Page_URL__c + '?campaignId=' +  Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Generated URL used for electronic marketing. This URL should be used when creating Pardot e-mails.</inlineHelpText>
        <label>Landing Page Campaign Link</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Landing_Page_URL__c</fullName>
        <label>Landing Page URL</label>
        <type>Url</type>
    </fields><fields>
        <fullName>Location_Address__c</fullName>
        <inlineHelpText>Address for the Event</inlineHelpText>
        <label>Location Address</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Location__c</fullName>
        <inlineHelpText>City, State</inlineHelpText>
        <label>Location City, State</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Overall_Goal__c</fullName>
        <label>Overall Goal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Event's Primary Contact</description>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Primary_Department__c</fullName>
        <globalPicklist>Departments</globalPicklist>
        <label>Primary Department</label>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Primary_GAU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary GAU</label>
        <referenceTo>npsp__General_Accounting_Unit__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>RE_Note__c</fullName>
        <label>RE Note</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Regional_Director_Email__c</fullName>
        <formula>Chapter__r.Regional_Director__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Regional Director Email</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Regional_Director__c</fullName>
        <formula>Chapter__r.Regional_Director__r.FirstName + " " +  Chapter__r.Regional_Director__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Regional Director</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Salesforce_ID__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Salesforce ID</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>State__c</fullName>
        <label>State / Province</label>
        <picklist>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NH</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><sharingModel>FullAccess</sharingModel><listViews>
        <fullName>AllActiveCampaigns</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Campaigns</label>
    </listViews><listViews>
        <fullName>All_Events</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.Event</value>
        </filters>
        <label>All Events</label>
    </listViews><listViews>
        <fullName>All_Raffles</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.Raffle</value>
        </filters>
        <label>All Raffles</label>
    </listViews><listViews>
        <fullName>MyActiveCampaigns</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews><recordTypes>
        <fullName>Default</fullName>
        <active>true</active>
        <description>A Campaign is a list of people used to track the effectiveness of your effort</description>
        <label>Default</label>
    </recordTypes><recordTypes>
        <fullName>Event</fullName>
        <active>true</active>
        <description>An event where people come together</description>
        <label>Event</label>
    </recordTypes><recordTypes>
        <fullName>List</fullName>
        <active>true</active>
        <label>List</label>
    </recordTypes><recordTypes>
        <fullName>Raffle</fullName>
        <active>true</active>
        <label>Raffle</label>
    </recordTypes><recordTypes>
        <fullName>Void</fullName>
        <active>false</active>
        <description>Tickets are sold to a group of people in order to win something</description>
        <label>Void</label>
    </recordTypes></CustomObject>